--- a/gb/13/11/7/n4005116.md
+++ b/gb/13/11/7/n4005116.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/afcutz3300/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/afcutz3300/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/afcutz3300/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/afcutz3300/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/afcutz3300/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/afcutz3300/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/afcutz3300/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/afcutz3300/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽媒爆蹂躏少女团伙 民众心惊</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/us-election-voter-fraud__1200x800-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2013年11月07日讯】（大纪元记者李扪心<ahref="https://github.com/afcutz3300/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>综合报导）本周新西兰媒体爆出了一个蹂躏少女团伙Roast Buster，不但故意勾引、强奸未成年少女，还把视频放到网上，进一步羞辱她们；不但如此，这个团伙还大肆招募其他年轻男孩加入，不以为耻，反以为荣，把<ahref="https://github.com/afcutz3300/djy/blob/master/gb/tag/%E7%8A%AF%E7%BD%AA.md#1">犯罪</a>当成娱乐活动。</p>
-<p>媒体大都在着重于警方反应的同时，也触发了民众对于这一严重社会问题的高度关注和担心。那些受害的女孩都只有十几岁，很多都是13-15岁的少女；而那些参与<ahref="https://github.com/afcutz3300/djy/blob/master/gb/tag/%E7%8A%AF%E7%BD%AA.md#1">犯罪</a>的男孩大多不到20岁，有一些可能真还处于“恶作剧”的年龄。</p>
+	<p>【大纪元2013年11月07日讯】（大纪元记者李扪心<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>综合报导）本周新西兰媒体爆出了一个蹂躏少女团伙Roast Buster，不但故意勾引、强奸未成年少女，还把视频放到网上，进一步羞辱她们；不但如此，这个团伙还大肆招募其他年轻男孩加入，不以为耻，反以为荣，把<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%8A%AF%E7%BD%AA.md#1">犯罪</a>当成娱乐活动。</p>
+<p>媒体大都在着重于警方反应的同时，也触发了民众对于这一严重社会问题的高度关注和担心。那些受害的女孩都只有十几岁，很多都是13-15岁的少女；而那些参与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%8A%AF%E7%BD%AA.md#1">犯罪</a>的男孩大多不到20岁，有一些可能真还处于“恶作剧”的年龄。</p>
 <p>此事让每个做父母的都心惊：如果自己的女儿受害怎么办？怎样才能避免自己的儿子加入这样的犯罪团伙？</p>
 <p><b>无道德约束 法律总有灰色地带</b></p>
 <p>早先，警方承认已经知道并观察这个团伙的活动2年了，但因为没有受害人出来报案，所以就没有采取任何行动。<br />不过截止到周四，已经有4名受害少女指称曾经报案，其中3例发生在2年前。尽管警方随后承认确有此事，但仍坚持说是证据不足，不足以立案。</p>
@@ -26,42 +26,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/11/4/6/n3220193.md#1">2010年纽犯罪率下降6.7％</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/11/10/4/n3391507.md#1">新西兰谋杀率达25年来最低</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/12/1/25/n3494908.md#1">驱逐不驱逐？澳纽间犯罪令两国政府头痛</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/12/7/8/n3630683.md#1">亚裔反犯罪组织：让政府听到我们的声音</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/4/6/n3220193.md#1">2010年纽犯罪率下降6.7％</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/10/4/n3391507.md#1">新西兰谋杀率达25年来最低</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/1/25/n3494908.md#1">驱逐不驱逐？澳纽间犯罪令两国政府头痛</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/7/8/n3630683.md#1">亚裔反犯罪组织：让政府听到我们的声音</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/afcutz3300/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/18/n11528891.md#1" target="_blank">观雨堂主：中共对中国与世界的公开掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/20/n12563137.md#1">川普总统和唐朝宰相都因“还”东西得了福报</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/21/n12566316.md#1">【拍案惊奇】鲍威尔：300万死人投票</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/21/n12565429.md#1">车评：硬朗的城市跨界车 2020 Hyundai Venue SEL</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/19/n12562260.md#1">鲍威尔：我们即将证明川普获压倒性胜利</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/20/n12564344.md#1">宾州Dominion临阵脱逃公听会 州众院质问</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/20/n12564577.md#1">陆媒惊爆：成龙撒了37年的一个弥天大谎</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/20/n12564311.md#1">吴京恐不能再拍动作戏 关节烂到软骨像杂草</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/17/n12555630.md#1">第57届金马奖完整得奖名单 莫子仪登影帝</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/19/n12561769.md#1">赵树海谈及家庭生活 赞高圆圆是标准儿媳</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/19/n12562027.md#1">吐槽罗晋视讯吃夜宵馋人 唐嫣以那位家属相称</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/20/n12564183.md#1">每天做5个动作 终结驼背软塌姿势 增肌效果加倍</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/19/n12561687.md#1">【罗厨寻味】洋葱炒牛肉</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/19/n12562184.md#1">新冠疫苗就要来了 医生：3种人接种有风险</a></li>
-<li><a href="https://github.com/afcutz3300/djy/blob/master/gb/20/11/20/n12563116.md#1">美国最北端城市迎来今年最后一次日落</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/afcutz3300/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/afcutz3300/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/11/7/n4005116.htm">纽媒爆蹂躏少女团伙 民众心惊</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/11/7/n4005116.htm">纽媒爆蹂躏少女团伙 民众心惊</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/afcutz3300/djy/blob/master/gb/13/11/7/n4005116.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/afcutz3300/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/afcutz3300/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/afcutz3300/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/afcutz3300/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afcutz3300/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/13/11/7/n4005116.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
